fix paragraph job spacing

--- a/assets/sass/components/job-offer.scss
+++ b/assets/sass/components/job-offer.scss
@@ -56,7 +56,7 @@
 
         @include media-breakpoint-up(xxl) {
             font-size: 26px;
-            margin-bottom: 1rem;
+
         }
     }
 
